# SDC2020

./: Dockerfile  build.sh
Assignment 2/Assignment 2/: .Assignment2_0851924.docx.icloud  .Assignment2_0851924.pdf.icloud  Assignment2_0851924.docx
Assignment 2/Assignment 2/Code/: 2.cpp
Assignment2/Code/: 2
Assignment3/: .gitignore  docker_run.sh
Assignment3/catkin_ws/src/imu_trans/: CMakeLists.txt  package.xml
Assignment3/catkin_ws/src/imu_trans/src/: imu_data_process.cpp
Assignment4/: .gitignore  Assignment4_0851924.docx  Assignment4_picture.rar  docker_run.sh
Assignment4/catkin_ws/src/hw4_0851924/: CMakeLists.txt  package.xml
Assignment4/catkin_ws/src/hw4_0851924/src/: hw4_node.cpp
Assignment5/: Assignment2_0851924.docx
